@@ -8,8 +8,8 @@ android {
         applicationId "com.tycho.app.primenumberfinder"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 13
-        versionName "1.3.1.DEV"
+        versionCode 14
+        versionName "1.3.1"
     }
     buildTypes {
         release {
